5/29/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.8 'Marshal West':
	- The fix for Issue 11 backported from coturn;
	
3/18/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.7 'Marshal West':
	- plain passwords in Redis database fixed;

2/28/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.6 'Marshal West':
	- bandwidth control fixed;
	- STUN/TURN control traffic counted separately from data traffic,
	for the sake of the bandwidth control;
	- REST API docs fixed;

2/3/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.5 'Marshal West':
	- hostname-to-ip-address resolution fixed;
	- TRANSPORT attribute handling fixed;
	- TOS (DiffServer) and TTL IP header field handling fixed;
	- peer logging added;

1/26/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.4 'Marshal West':
	- SSLv2 support removed;
	- OpenSSL 1.1.0 support added.
	
12/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.3 'Marshal West':
	- Redis read message queue backlog fixed.
	- Typos fixed in the docs.
	
11/10/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.2 'Marshal West':
	- TLS connection procedure improved in uclient test program.
	- Reliability improvements (Issue 141).
	- external address mapping fixes for Amazon EC2.
	- docs fixes.

11/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.1 'Marshal West':
	- Request re-transmission implemented in uclient test program.
	- TLS connection procedure improved in uclient test program.

10/31/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.6 'Marshal West':
	- Relay RTCP sockets ports allocation fixed.
	- SSL renegotiation callback fixed.
	- List of libraries cleaned.
	- Debian UFW file added to the Debian package.

10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.5 'Marshal West':
	- Mobile sessions authentication improved.
	- Authentication code cleaning.
	- Quota allocation fixed.
	- Core dump fixed.
	- Memory code cleaning.
	- Logging code cleaning.